CORE-22578: Product swatch image getting cropped issue resolved.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-pdp-short-desc.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-pdp-short-desc.scss
@@ -26,7 +26,6 @@
         z-index: 1;
         width: 100%;
         height: 5rem;
-        background: linear-gradient(to bottom, rgba(255, 255, 255, 0), #fff);
       }
 
       p {
